feat(scheduler): Implement APScheduler for production-grade background processing
- Add APScheduler integration with parallel task execution (email sending, reply checking, daily reset)
- Implement PostgreSQL support with automatic cloud database detection and connection pooling
- Add health monitoring endpoint (/health) for uptime monitoring and crash recovery verification
- Update database configuration to support both SQLite and PostgreSQL with environment-based selection
- Enhance reply_checker with improved error handling and automatic retry logic
- Update frontend with production deployment indicators and status monitoring
- Add comprehensive deployment guides for Railway, Render, and cloud platforms
- Update dependencies (pyproject.toml) with APScheduler and psycopg2 for PostgreSQL
- Restructure README with production-ready quick start and architecture documentation
- Add Procfile and cloud platform configuration files for seamless deployment
- Implement crash recovery mechanisms with automatic task restart on failures
- Enable horizontal scaling support with stateless architecture design

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "requests>=2.31.0",
     "aiofiles>=23.2.1",
     "python-multipart>=0.0.6",
+    "apscheduler>=3.11.2",
 ]
 
 [build-system]
