feat: Update email settings management and UI for improved user experience
- Remove owner-only license sheet URL from settings UI
- Add email queue interval and reply check interval settings
- Enhance backend to support new settings for email processing
- Update frontend to include input fields for email intervals with hints
- Improve styling for settings hints in the UI

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,32 @@
-# License Configuration
+# =============================================================================
+# Owner-only: License sheet (not shown to clients; set only in .env on server)
+# =============================================================================
 LICENSE_SHEET_URL=https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/export?format=csv
-LICENSE_KEY=YOUR_LICENSE_KEY_HERE
+LICENSE_KEY=YOUR_LICENSE_KEY_FOR_VALIDATION
 
-# Email Configuration
-EMAIL_ADDRESS=your-email@example.com
-EMAIL_PASSWORD=your-app-password-here
+# =============================================================================
+# Client-facing: Users enter license key + email accounts in Settings UI.
+# Optional: set below for fallback when no email accounts in DB.
+# =============================================================================
+EMAIL_ADDRESS=
+EMAIL_PASSWORD=
 
-# SMTP Configuration
+# SMTP / IMAP (optional if using Settings → Email accounts)
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
-
-# IMAP Configuration
 IMAP_SERVER=imap.gmail.com
 IMAP_PORT=993
 
-# Sending Limits
+# =============================================================================
+# Intervals (seconds). Use in .env or Settings for demo vs production.
+# Demo: 60 = every 1 min. Production: 300 = every 5 min (avoids spam/block).
+# =============================================================================
+EMAIL_QUEUE_INTERVAL_SECONDS=300
+REPLY_CHECK_INTERVAL_SECONDS=300
+
+# =============================================================================
+# Sending limits (standard values so providers don't flag as spam)
+# =============================================================================
 DAILY_EMAIL_LIMIT=500
 MIN_DELAY_SECONDS=60
 MAX_DELAY_SECONDS=120
@@ -22,12 +34,12 @@ PAUSE_EVERY_N_EMAILS=20
 PAUSE_MIN_MINUTES=5
 PAUSE_MAX_MINUTES=8
 
-# Calendar Link (for auto-replies)
+# Calendar link (for auto-reply when lead replies)
 CALENDAR_LINK=https://calendly.com/your-link
 
 # Database
 DATABASE_URL=sqlite:///./email_system.db
 
-# API Configuration
+# API
 API_HOST=0.0.0.0
 API_PORT=8000
