--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 description = "Private Email Outreach System with 24/7 reliability"
 requires-python = ">=3.10"
 dependencies = [
-    "fastapi>=0.109.0",
+    "fastapi==0.109.0",
     "uvicorn>=0.27.0",
     "sqlalchemy>=2.0.25",
     "pandas>=2.2.0",
